sofia-rs/tui/src/bottom_pane/snapshots/sofia_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1826
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
  └ First detail line                           
    Second detail line                          
                                                
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask Sofia to do anything                      
                                                
  ? for shortcuts            100% context left
